--- a/index.html
+++ b/index.html
@@ -451,25 +451,22 @@
               <div id="carouselExampleControls5" class="carousel carousel-dark slide" data-bs-ride="carousel">
                   <div class="carousel-inner">
                     <div class="carousel-item active">
-                      <img src="./assets/safenet/safenetSetup1.png" class="d-block w-100 instructivo__img" alt="...">
+                      <img src="./assets/cyrpto/cryptoPaso1.png" class="d-block w-100 instructivo__img" alt="...">
                     </div>
                     <div class="carousel-item">
-                      <img src="./assets/safenet/safenetSetup2.png" class="d-block w-100 instructivo__img" alt="...">
+                      <img src="./assets/cyrpto/cryptoPaso2.png" class="d-block w-100 instructivo__img" alt="...">
                     </div>
                     <div class="carousel-item">
-                      <img src="./assets/safenet/safenetSetup3.png" class="d-block w-100 instructivo__img" alt="...">
+                      <img src="./assets/cyrpto/cryptoPaso3.png" class="d-block w-100 instructivo__img" alt="...">
                     </div>
                     <div class="carousel-item">
-                      <img src="./assets/safenet/safenetSetup4.png" class="d-block w-100 instructivo__img" alt="...">
+                      <img src="./assets/cyrpto/cryptoPaso4.png" class="d-block w-100 instructivo__img" alt="...">
                     </div>
                     <div class="carousel-item">
-                      <img src="./assets/safenet/safenetSetup5.png" class="d-block w-100 instructivo__img" alt="...">
+                      <img src="./assets/cyrpto/cryptoPaso5.png" class="d-block w-100 instructivo__img" alt="...">
                     </div>
                     <div class="carousel-item">
-                      <img src="./assets/safenet/safenetSetup6.png" class="d-block w-100 instructivo__img" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                      <img src="./assets/safenet/safenetSetup7.png" class="d-block w-100 instructivo__img" alt="...">
+                      <img src="./assets/cyrpto/cryptoPaso6.png" class="d-block w-100 instructivo__img" alt="...">
                     </div>
                   </div>
                   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls5" data-bs-slide="prev">
@@ -1075,6 +1072,64 @@
 
 </article>
 
+    <!-- PREGUNTAS FRECUENTES -->
+
+    <a href="#" class="btn-flotante" id="faq">Preguntas Frecuentes</a>
+
+    <article class="container-fluid faq" id="faqTxt" style="display: none;">
+      <p class="faq__titulo text-center">SECCION PREGUNTAS FRECUENTES</p>
+      <ol >
+        <li> <span class="faq__preg">¿Qué documentos puedo firmar con firma digital? </span> <br>
+          Con la firma digital puedes firmar cualquier tipo de documento, ref. ley 25.506 y Art. 288 del Código Civil Y com. De la Nación. Puedes firmar cualquier documento siempre y cuando tus facultades legales te lo permitan.
+          </li>
+        <li> <span class="faq__preg">¿Puedo agregar firmantes a la empresa?</span>  <br>
+          Si claro, Si es la misma razón social, se presenta: Última acta de designación de cargos certificada por escribano y Nueva acta autorizando la emisión certificada por escribano. Si el escribano es de provincia también legalizado. Sobre el costo, el nuevo certificado tiene un valor de 140 dólares mas IVA, y el token 40 dólares mas IVA. Luego se realiza la reunión presencial para emitir.
+          </li>
+        <li> <span class="faq__preg">¿Si yo tengo firma digital para una empresa puedo tener firma digital para otra razón social?</span>  <br>
+          Si claro, Puedes agregar la nueva razón social al token que ya tienes. En ese caso, solo tienes el costo del certificado 140 dólares más IVA. Debes presentar toda la documentación correspondiente, y luego hacer la emisión presencial con turno previo.
+          </li>
+        <li> <span class="faq__preg">Cuando firmo digitalmente me figura un cartel que dice “La firma es desconocida” ¿Eso es normal?</span>  <br>
+          Eso es porque no se configuro la PC en la cual estas firmando. Este paso debe realizarse en las maquinas que firman y que reciben los documentos, es importante aclarar, que si no se hace este requisito no invalida la firma digital. Para constatar la validez del certificado, por la cadena de confianza, debe instalar los certificados de AC RAIZ ARGENTINA y DIGILOGIX S.A. (certificador licenciado) . Ambos los puede instalar en conjunto, se descargan de la página http://www.digilogix.com.ar/Descargas una vez instalado este programa debe ser ejecutado con permisos de administrador, Y luego por única vez deben seguir los siguientes pasos en acrobat reader dc: Edición / preferencias / firmas / y en el panel de verificación hacer clic en “más” y luego tildar “VALIDANDO FIRMAS” y “VALIDANDO DOCUMENTOS CERTIFICADOS” Esto solo es válido para Windows, en Mac persiste la leyenda, pero no invalida el documento.
+          </li>
+        <li> <span class="faq__preg">Cuando subo el documento “libro sueldo” a la plataforma de Gobierno de la Ciudad, me indica que existe un error en JAVA ¿Tiene solución?</span>  <br>
+          Es un error que no tiene relación con la firma digital, puedes consultarlo con Gob. De la Ciudad, sin embargo, recomendamos firmar el documento en PDF y subirlo firmado a la plataforma.
+          </li>
+        <li> <span class="faq__preg">Me pidieron un archivo que se llama .cer o certificado público ¿De dónde lo descargo?</span>  <br>
+          El archivo .cer lo puedes descargar de nuestra página web www.digilogix.com.ar en ESTADOS DE CERTIFICADOS, debes colocar el número de Cuil / Cuit del firmante (no de la empresa) y luego buscar. Te recomendamos para enviarlo que lo hagas comprimido.
+          </li>
+        <li> <span class="faq__preg">¿Cómo se cuándo se vence mi certificado?</span>  <br>
+          Para consultar la vigencia del certificado y otros datos, puedes hacerlo desde nuestra página web www.digilogix.com.ar en ESTADOS DE CERTIFICADOS, debes colocar el número de Cuil / Cuit del firmante (no de la empresa) y luego buscar.  La renovación se inicia un mes antes del vencimiento.
+          </li>
+        <li> <span class="faq__preg">¿Me olvide la clave la puedo recuperar? </span> <br>
+          No, la clave es lo que protege a la firma digital, por ende, esta encriptada. Si quieres emitir nuevamente el certificado nos envías un correo e iniciamos la gestión. En este caso debes revocar el certificado.
+          </li>
+        <li> <span class="faq__preg">¿Perdí el token, como puedo recuperarlo? </span> <br>
+          Si perdiste el token hay que iniciar la gestión nuevamente, te pedimos nos envíes un email. En este caso debes revocar el certificado.
+          </li>
+        <li> <span class="faq__preg">¿Puedo tener mi firma digital en 2 token?</span>  <br>
+          No, la firma digital no se puede duplicar. Pero si puedes tener en un mismo token firma digital de distintas empresas.
+          </li>
+        <li> <span class="faq__preg">¿Puedo compartir el token con otra persona?</span>  <br>
+          No, el token es personal. 
+          </li>
+        <li> <span class="faq__preg">¿Puedo firmar recibos de sueldos con firma digital? </span> <br>
+          Si claro, para eso necesitas una plataforma tipo gestor documental, si no la tienes nos puedes consultar.
+          </li>
+        <li> <span class="faq__preg">¿Puedo intercambiar documentación con firma digital con otras personas?</span>  <br>
+          SI claro, puedes hacerlo por email, en CD, DVD o pendrive. Pero te recomendamos usar una plataforma tipo gestor documental, si te interesa nos puedes consultar.
+          </li>
+        <li> <span class="faq__preg">¿Un documento firmado digitalmente tiene valor si lo imprimo? </span> <br>
+          No, los documentos firmados digitalmente no deben imprimirse para que no pierdan la calidad de firmado.
+          </li>
+        <li> <span class="faq__preg">¿Mi token es compatible en MAC?</span>  <br>
+          El token compatible con MAC es el de la marca m token crypto. El dispositivo es de color rojo. 
+          </li>
+        <li> <span class="faq__preg">¿Me quiero comunicar con DIGILOGIX como hago?</span>  <br>
+          Tenemos varios canales de comunicación, Por email a info@digilogix.com.ar, Por WhatsApp 5491136811469, Por teléfono de línea 4-345-5150 opción 4.
+          </li>
+      </ol>
+    </article>
+
     <!-- FOOTER -->
 
     <footer class="footer text-center">
@@ -1088,6 +1143,7 @@
     <script src="./js/crypto.js" type="module"></script>
     <script src="./js/epass.js" type="module"></script>
     <script src="./js/athena.js" type="module"></script>
+    <script src="./js/faq.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
