--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <!-- TITULO Y PRESENTACION -->
 
-    <div class="container-fluid d-flex justify-content-center presentacion">
+    <div class="container-fluid d-flex justify-content-center presentacion" id="tituloPrincipal">
         <div class="row">
             <P class="col-md-12 presentacion__titulo"><strong>MANUAL INTERACTIVO DE INSTRUCCIONES PARA FIRMA DIGITAL</strong></P>
         </div>
@@ -310,6 +310,10 @@
             </div>
         </div>
 
+        <div class="row volverArriba text-center">
+         <a href="#tituloPrincipal"><img src="./assets/alineacion-superior.png" alt="" class="volverArriba__img"></a> 
+        </div>
+
     </article>
 
     <!-- CRYPTOID SELECCION DE SO -->
@@ -428,6 +432,11 @@
   <div class="row d-flex justify-content-center">
     <P class="text-center instructivo__text">En caso de haber realizado todo el instructivo y no lograr poder firmar un documento, seguir paso a paso las configuraciones de las hojas 10 a 16 de la siguiente guia haciendo click <a href="https://drive.google.com/file/d/1UGIJfsK66DKPHmD7ZDbs48radGoqV-lv/view?usp=sharing">AQUI</a></P>
   </div>
+
+  <div class="row volverArriba text-center">
+    <a href="#tituloPrincipal"><img src="./assets/alineacion-superior.png" alt="" class="volverArriba__img"></a> 
+   </div>
+
     </article>
 
     <!-- INSTRUCTIVO ID WINDOWS -->
@@ -645,6 +654,10 @@
           </div>
       </div>
 
+      <div class="row volverArriba text-center">
+        <a href="#tituloPrincipal"><img src="./assets/alineacion-superior.png" alt="" class="volverArriba__img"></a> 
+       </div>
+
   </article>
 
   <!-- INSTRUCTIVO EPASS 2003 -->
@@ -855,6 +868,10 @@
               </div>
         </div>
     </div>
+
+    <div class="row volverArriba text-center">
+      <a href="#tituloPrincipal"><img src="./assets/alineacion-superior.png" alt="" class="volverArriba__img"></a> 
+     </div>
 
 </article>
 
@@ -1070,6 +1087,10 @@
       </div>
   </div>
 
+  <div class="row volverArriba text-center">
+    <a href="#tituloPrincipal"><img src="./assets/alineacion-superior.png" alt="" class="volverArriba__img"></a> 
+   </div>
+
 </article>
 
     <!-- PREGUNTAS FRECUENTES -->
@@ -1128,6 +1149,10 @@
           Tenemos varios canales de comunicación, Por email a info@digilogix.com.ar, Por WhatsApp 5491136811469, Por teléfono de línea 4-345-5150 opción 4.
           </li>
       </ol>
+
+      <div class="row volverArriba text-center">
+        <a href="#tituloPrincipal"><img src="./assets/alineacion-superior.png" alt="" class="volverArriba__img"></a> 
+       </div>
     </article>
 
     <!-- FOOTER -->
