--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
     <!-- TITULO Y PRESENTACION -->
 
     <div class="container-fluid d-flex justify-content-center presentacion" id="tituloPrincipal">
-        <div class="row">
-            <P class="col-md-12 presentacion__titulo"><strong>MANUAL INTERACTIVO DE INSTRUCCIONES PARA FIRMA DIGITAL</strong></P>
+        <div class="row"> 
+          <P class="col-md-12 text-center presentacion__titulo"><strong>Bienvenido Nicolas!</strong></P>
+            <P class="col-md-12 text-center presentacion__titulo"><strong>MANUAL INTERACTIVO DE INSTRUCCIONES PARA FIRMA DIGITAL</strong></P>
         </div>
     </div>
     <div class="container-fluid d-flex justify-content-center">
@@ -1163,12 +1164,13 @@
 
 
 
-
+    <script src="./js/alert.js"></script>
     <script src="./js/safenet.js" type="module"></script>
     <script src="./js/crypto.js" type="module"></script>
     <script src="./js/epass.js" type="module"></script>
     <script src="./js/athena.js" type="module"></script>
     <script src="./js/faq.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
